# Pic

./: .travis.yml  CMakeLists.txt  meson.build  meson_options.txt
Pic/: Channels.hpp  Image.cpp  Image.hpp  Pixel.hpp  PixelIterator.hpp
Pic/FreeImage/: FIImageImpl.cpp  FIImageImpl.hpp
Tests/: CMakeLists.txt  PicTests.cpp  meson.build
